Fix login button size on mobile

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -194,7 +194,6 @@ margin: auto;
   border-radius: 20%;
   background-color: #008037;
   box-shadow: 0 10px 20px -10px #000000;
-  width: 5%;
 }
 
 h4 {
